--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.2.2",
     "bootstrap": "^5.2.3",
     "gotrue-js": "^0.9.29",
+    "node-fetch": "^3.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
