--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.2.3",
     "gotrue-js": "^0.9.29",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "node-fetch": "^3.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
