--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.10",
+    "@types/react": "^18.0.30",
+    "@types/react-dom": "^18.0.11",
     "@types/react-redux": "^7.1.25",
     "axios": "^1.2.2",
     "bootstrap": "^5.2.3",
@@ -15,6 +19,7 @@
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "node-fetch": "^3.3.0",
+    "notion-types": "^6.16.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
@@ -23,7 +28,7 @@
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "sass": "^1.58.0",
-    "typescript": "^4.6.4",
+    "typescript": "^4.9.5",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4"
   },
