--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.2.3",
     "gotrue-js": "^0.9.29",
     "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "notion-types": "^6.16.0",
     "react": "^18.2.0",
