support: hotfixes for new page re routes and time for lastLoggedIn

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "notion-types": "^6.16.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
