--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,7 @@
     "moduleResolution": "node16",                       /* Specify how TypeScript looks up a file from a given module specifier. */
     "baseUrl": "./src",                                  /* Specify the base directory to resolve non-relative module names. */
     "paths": {
-      "class/*": ["class/*"]
+      // "class/*": ["class/*"]
     },                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
@@ -109,7 +109,7 @@
   "exclude": [
           "node_modules",
       ],
-      "include": [
-        "src"
-      ]
+  "include": [
+    "src"
+  ]
 }
