--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "notion-types": "^6.16.0",
+    "nth-check": "^2.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
@@ -32,7 +33,8 @@
     "sass": "^1.58.0",
     "typescript": "^4.6.4",
     "universal-cookie": "^4.0.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.76.0"
   },
   "scripts": {
     "start": "react-scripts start",
