--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,6 @@
     "strictNullChecks": true,
     "strictFunctionTypes": false
   },
-  "include": ["src", "netlify/functions"],
+  "include": ["src", "netlify/functions", "vite.config.js"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
