--- a/package.json
+++ b/package.json
@@ -3,20 +3,24 @@
   "private": true,
   "version": "0.0.0",
   "type": "commonjs",
+  "jest": {
+    "collectCoverage": true
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.1",
     "@netlify/functions": "^1.6.0",
-    "@notionhq/client": "^2.2.3",
-    "@reduxjs/toolkit": "^1.9.1",
+    "@notionhq/client": "^2.2.9",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/react-redux": "^7.1.25",
-    "axios": "^1.2.2",
-    "bootstrap": "^5.2.3",
+    "axios": "^1.4.0",
+    "bootstrap": "^5.3.1",
     "gotrue-js": "^0.9.29",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
@@ -24,27 +28,34 @@
     "moment-timezone": "^0.5.43",
     "notion-types": "^6.16.0",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.45.1",
-    "react-icons": "^4.7.1",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.6.2",
-    "sass": "^1.58.0",
+    "react-hook-form": "^7.45.2",
+    "react-icons": "^4.10.1",
+    "react-redux": "^8.1.2",
+    "react-router-dom": "^6.14.2",
+    "sass": "^1.64.2",
     "universal-cookie": "^4.0.4",
     "yup": "^1.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
+    "@jest/globals": "^29.6.2",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.5.3",
+    "@types/react": "^18.2.18",
+    "@types/react-dom": "^18.2.7",
     "@types/react-redux": "^7.1.25",
-    "@typescript-eslint/eslint-plugin": "^5.61.0",
-    "@typescript-eslint/parser": "^5.61.0",
+    "@typescript-eslint/eslint-plugin": "^6.2.1",
+    "@typescript-eslint/parser": "^6.2.1",
     "@vitejs/plugin-react-swc": "^3.3.2",
-    "eslint": "^8.44.0",
+    "eslint": "^8.46.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.1",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.0"
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "jest": "^29.6.2",
+    "typescript": "^5.1.6",
+    "vite": "^4.4.8",
+    "yarn-upgrade-all": "^0.7.2"
   }
 }
