--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,12 @@
     "strictNullChecks": true,
     "strictFunctionTypes": false
   },
-  "include": ["src", "netlify/functions", "vite.config.js"],
+  "include": [
+    "src",
+    "netlify/functions",
+    "vite.config.js",
+    "babel.config.js",
+    "jest.config.js"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
