--- a/package.json
+++ b/package.json
@@ -3,12 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "type": "commonjs",
-  "jest": {
-    "collectCoverage": true
-  },
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc -p tsconfig.prod.json && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "jest"
@@ -18,6 +15,8 @@
     "@netlify/functions": "^1.6.0",
     "@notionhq/client": "^2.2.9",
     "@reduxjs/toolkit": "^1.9.5",
+    "@swc/core": "^1.3.73",
+    "@swc/jest": "^0.2.27",
     "@types/react-redux": "^7.1.25",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
@@ -50,10 +49,15 @@
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@typescript-eslint/parser": "^6.2.1",
     "@vitejs/plugin-react-swc": "^3.3.2",
+    "camelcase": "6",
     "eslint": "^8.46.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "jest": "^29.6.2",
+    "jest-css-modules-transform": "^4.4.2",
+    "jest-environment-jsdom": "^29.6.2",
+    "jest-watch-typeahead": "^2.2.2",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
     "vite": "^4.4.8",
     "yarn-upgrade-all": "^0.7.2"
