--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.3",
-    "@netlify/functions": "^1.6.0",
+    "@netlify/functions": "^2.4.1",
     "@notionhq/client": "^2.2.14",
-    "@reduxjs/toolkit": "^1.9.7",
+    "@reduxjs/toolkit": "^2.0.1",
     "@swc/core": "^1.3.102",
     "@swc/jest": "^0.2.29",
     "@types/react-redux": "^7.1.33",
     "axios": "^1.6.3",
     "bootstrap": "^5.3.2",
     "gotrue-js": "^0.9.29",
-    "jwt-decode": "^3.1.2",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.44",
@@ -31,15 +31,15 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
-    "react-redux": "^8.1.3",
+    "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
     "sass": "^1.69.7",
-    "universal-cookie": "^4.0.4",
+    "universal-cookie": "^7.0.0",
     "yup": "^1.3.3"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
-    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/jest-dom": "^6.1.6",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.11",
@@ -49,7 +49,7 @@
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
-    "camelcase": "6",
+    "camelcase": "^8.0.0",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
@@ -59,7 +59,7 @@
     "jest-watch-typeahead": "^2.2.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
-    "vite": "^5.0.5",
+    "vite": "^5.0.10",
     "yarn-upgrade-all": "^0.7.2"
   }
 }
