--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,12 @@
     "module": "ESNext",
     "skipLibCheck": true,
 
+    "typeRoots": ["./node_modules/@types"],
+    "types": ["node", "jest", "react"],
+    "esModuleInterop": true,
+
     /* Bundler mode */
-    "moduleResolution": "bundler",
+    "moduleResolution": "Node",
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
